# lpg-gcp

./: .dockerignore  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile.crownsync  Dockerfile.webhook  README.md  cloudbuild.crownsync.yaml  cloudbuild.webhook.yaml  schema.sql
crown-sync/: requirements.txt
data/: crown-skus-2025-06-01.csv  kit-boms-2025-06-01.csv
docs/: architecture.md
lpg_common/: db.py  pyproject.toml
migrations/: 0001_orders_add_invoice_comments_shipto.sql  0002_add_vendor_invoices.sql  0003_vendor_invoice_lines_add_is_fee.sql  0004_purchase_orders.sql  0005_product_components_self_ref_guard.sql  0006_order_overrides.sql  0007_purchase_order_manual_edits.sql  0008_shipments_surrogate_pk.sql  0009_order_margins_view.sql  0010_order_margin_manual.sql
scripts/: backfill_orders_2026.py  backfill_vendor_invoices_from_sf.py  crown_invoice_parser.py  crown_invoice_writer.py  deploy-job.sh  deploy.sh  requirements.txt  seed_crown_pricing.py  seed_kit_boms.py  sync_crown_invoices.py
terraform/: artifact_registry.tf  backend.tf  cloud_sql.tf  outputs.tf  providers.tf  storage.tf  variables.tf  versions.tf
webhook-handler/: .dockerignore  .gcloudignore  Dockerfile  auth.py  db.py  gcs_storage.py  graph_mail.py  ingest.py  logging_config.py  main.py  order_economics_form.py  order_overrides_form.py  po_composer.py  purchase_order_builder.py  purchase_order_pdf.py  purchase_order_repository.py  requirements.txt  shift4_models.py  shift4_sample.json  smoke_auth.py  smoke_db.py  smoke_ingest.py  smoke_po.py  smoke_test.py  test_payload.json  (+1 more)
(+27 files in other folders)
